Chained appropriate "exercise.setup"s for many exercises and fixed various typos and problems with code/exercises not displaying.  (#154)
* Restructure section with additional information

- I think it would be helpful to take every lesson as an independent lection. Therefore all starting information has to be applied again.

- I changed the chunk option 'eval=FALSE' to 'exercise=TRUE' because students

(a) should see the results of the code explanation and

(b) should be engaged with some interaction

To prevent conflicts with the following exercises' names, I also had to rename the chunk labels. Where available, I construct them with "ex0[serial number]_[old-label]."

* add explanation of colored 2D data space

- merge two headers, "Not longer a 2D problem" and "Data space is 3D" to "Data space is 3D."

- convert R chunk to exercise setup chunk (`data_space` is needed later)

- explain what the plot is doing

* add more detailed explanations

Because of the sparse explication, I believe that the code chunks are not understandable for students. At least it was challenging for me. So I suggest providing more explanation and restructuring the text. (As I am not a domain expert and not an English native, please correct where it is necessary!)

I also had to revise the exercise chunk labels before and after this changed section. It turned out that shared exercise setup chunks are not appropriate. When developing step-by-step `learnr` exercises, chained setup chunks are necessary. See for details: https://rstudio.github.io/learnr/exercises.html#Exercise_Setup_Chunks

I (will) establish two sets of exercise setup labels: one for the `babies` and the other for the coming `mariokart` data set exercises. Each one follows the rule: <ex[number]-[dataset]-[name]>. The resulting labels may seem too long, but I think they may come in handy whenever one rearranges the code.

* add detailed explanations

I tried to explain the (complex) procedure with

--- a/02-explore/01-lesson/02-01-lesson.Rmd
+++ b/02-explore/01-lesson/02-01-lesson.Rmd
@@ -8,6 +8,9 @@ runtime: shiny_prerendered
 ---
 
 ```{r setup, message=FALSE, warning=FALSE, include=FALSE}
+if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
+pacman::p_load(knitr, gridExtra, png, gtable, stringr, grid, learnr, kableExtra, tidyverse, emo, gt, ggplot2, openintro)
+
 library(knitr)
 library(gridExtra)
 library(png)
@@ -496,8 +499,6 @@ comics %>%
       columns = vars(Bad),
       rows = Bad == .57)
   )
-
-## WHY IS THIS TABLE SQASHED?
 ```
 
 To condition on the columns rather than the rows, we change the variable we are grouping. To condition on the columns, we `group_by()` the `align` variable. After conditioning on the columns, we now see that the columns sum to one. Also, we learn, for example, that the proportion of bad characters that are secret is around 63%.
@@ -789,7 +790,7 @@ The pie chart is a common way to display categorical data where the size of the 
 If we represent this data using a barchart the answer is obvious: the proportion of public is greater. For that reason, it's generally a good idea to stick to barcharts.
 
 ```{r pie, echo=FALSE, fig.height=3, fig.width=6, cache = TRUE}
-plot1 <- ggplot(comics, aes(x = "", y = id, fill = id))+
+plot1 <- ggplot(comics %>% group_by(id)%>%count, aes(x = "", y = n, fill = id))+
  geom_bar(stat="identity", width=1)+
  coord_polar("y", start=0) +
    theme(axis.text = element_blank(),
